# systech-aidd

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy-check.sh  docker-compose.prod.yml  docker-compose.yml  env.production.example  pyproject.toml  pytest.ini
.cursor/commands/: review.md
.cursor/plans/: d1-build-publish-baab1c33.plan.md  s02-database-persistence-2b48152b.plan.md  sprint-f01-mock-api-cacd9ae9.plan.md  sprint-f03-dashboard-731e1f8d.plan.md  sprint-f04-dashboard.md
.cursor/rules/: conventions.mdc  convertions.mdc  qa_conventions.mdc  workflow.mdc  workflow_tdd.mdc  workflow_tech_debt.mdc
.github/workflows/: build.yml
devops/: DEPLOY_CHECKLIST.md  DEPLOY_COMMANDS.md  FILES_TO_DEPLOY.md  READINESS_REPORT.md
devops/doc/: DEPLOY_QUICKSTART.md  devops-roadmap.md  github-actions-guide.md
docs/: ITERATION_ROADMAP_TEMPLATE.md  api-examples.md  architecture_visualization.md  consistency-report.md  conventions.md  dashboard-requirements.md  frontend-roadmap.md  idea.md  real-stats-api.md  roadmap.md  tasklist.md  tasklist_tech_dept.md  vision.md
docs/guides/: 01_GETTING_STARTED.md  02_ARCHITECTURE_OVERVIEW.md  03_DATA_MODEL.md  04_INTEGRATIONS.md  05_CODEBASE_TOUR.md  06_CONFIGURATION_AND_SECRETS.md  07_CI_CD.md  README.md  (+3 more)
frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
migrations/: 001_create_messages.sql  002_create_users.sql  003_create_chat_messages.sql
src/: __init__.py  api_main.py  bot.py  chat_manager.py  config.py  conversation.py  database.py  handlers.py  llm_client.py  main.py  migrations.py
tests/: __init__.py  conftest.py  test_bot.py  test_config.py  test_conversation.py  test_database_users.py  test_handlers.py  test_llm_client.py  test_llm_client_unit.py  test_real_stat_collector.py
(+65 files in other folders)
